--- a/assets/sass/components/_sidebarcard.scss
+++ b/assets/sass/components/_sidebarcard.scss
@@ -67,6 +67,7 @@
   &__title {
     color: var(--clr_black);
     font-size: 1.5rem;
+    text-transform: capitalize;
     display: inline-block;
     font-weight: 500;
     margin-bottom: 1.5rem;
